# git-memory-harness

./: README.md  pyproject.toml
git_memory_harness/: __init__.py  cli.py  client.py  mcp_server.py  memory.py  repo.py
git_memory_harness/integrations/: claude_code.py  opencode.py
tests/: test_cli.py  test_client.py  test_mcp_server.py  test_memory.py  test_repo.py
